# mylalang

./: .dockerignore  Cargo.toml  Dockerfile  readme.md  test_program.my
examples/: comparison.my  import.my  let_conditionals.my  let_functions.my  loop_counter.my  map.my
src/: core.rs  env.rs  evaluator.rs  interpreter.rs  lib.rs  main.rs  parser.rs  tokenizer.rs  types.rs
src/core/: arithmetic_operators.rs  comparison_operators.rs  construction_functions.rs  env.rs  eval_test.rs  file_functions.rs  mod.rs  native_functions.rs  output_functions.rs  types.rs
src/native/: arithmetic_operators.my  comparison_operators.my  constructor_operators.my  file_functions.my  functions.my  higher_order_functions.my  math_functions.my  mod.rs  search_functions.my
tests/: add_operator_test.rs  closure_test.rs  common.rs  def_test.rs  do_test.rs  file_test.rs  function_test.rs  if_test.rs  tco_test.rs  unless_test.rs
