[package]
name = "mylalang"
version = "0.1.0"
authors = ["Alexander Butt-Piercey <alexander.butt-piercey@solarisbank.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myla"
doctest = false

[dependencies]
rustyline = "6.2.0"
